--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@types/react-dom": "^18",
     "eslint": "^9.13.0",
     "eslint-config-next": "15.0.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
