:package: Chore: Day.js 추가

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "glob": "^11.0.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.454.0",
@@ -22,10 +23,10 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/glob": "^8.1.0",
     "@types/node": "^22.8.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/glob": "^8.1.0",
     "eslint": "^9.13.0",
     "eslint-config-next": "15.0.2",
     "eslint-config-prettier": "^9.1.0",
