--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@types/node": "^22.8.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^9.13.0",
-    "eslint-config-next": "15.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
+    "eslint": "^9.14.0",
+    "eslint-config-next": "^15.0.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "postcss": "^8",
