--- a/.github/workflows/vercel-product-deploy.yaml
+++ b/.github/workflows/vercel-product-deploy.yaml
@@ -1,7 +1,7 @@
 name: Vercel Production Deployment
 env:
-  VERCEL_ORG_ID: $VERCEL_ORGANIZATION_ID
-  VERCEL_PROJECT_ID: $VERCEL_PROJECT_ID
+  VERCEL_ORG_ID: ${{ VERCEL_ORGANIZATION_ID }}
+  VERCEL_PROJECT_ID: ${{ VERCEL_PROJECT_ID }}
 
 on:
   push:
@@ -16,8 +16,8 @@ jobs:
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
       - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token=$VERCEL_TOKEN
+        run: vercel pull --yes --environment=production --token=${{ VERCEL_TOKEN }}
       - name: Build Project Artifacts
-        run: vercel build --prod --token=$VERCEL_TOKEN
+        run: vercel build --prod --token=${{ VERCEL_TOKEN }}
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --prod --token=$VERCEL_TOKEN
+        run: vercel deploy --prebuilt --prod --token=${{ VERCEL_TOKEN }}
